--- a/articles/expressroute/TOC.yml
+++ b/articles/expressroute/TOC.yml
@@ -20,7 +20,7 @@
   items:
     - name: Creación y modificación de la configuración de emparejamiento
       items:
-        - name: Azure Portal
+        - name: Azure portal
           href: expressroute-howto-routing-portal-resource-manager.md
         - name: Azure PowerShell
           href: expressroute-howto-routing-arm.md
@@ -28,13 +28,13 @@
           href: howto-routing-cli.md
     - name: Configuración de una puerta de enlace de red virtual para ExpressRoute
       items:
-        - name: Azure Portal
+        - name: Azure portal
           href: expressroute-howto-add-gateway-portal-resource-manager.md
         - name: Azure PowerShell
           href: expressroute-howto-add-gateway-resource-manager.md
     - name: Vinculación de una red virtual a un circuito ExpressRoute
       items:
-        - name: Azure Portal
+        - name: Azure portal
           href: expressroute-howto-linkvnet-portal-resource-manager.md
         - name: Azure PowerShell
           href: expressroute-howto-linkvnet-arm.md
@@ -42,7 +42,7 @@
           href: howto-linkvnet-cli.md
     - name: Configuración de filtros de ruta para el emparejamiento de Microsoft
       items:
-        - name: Azure Portal
+        - name: Azure portal
           href: how-to-routefilter-portal.md
         - name: Azure PowerShell
           href: how-to-routefilter-powershell.md
@@ -166,6 +166,8 @@
               href: expressroute-howto-reset-peering-portal.md
             - name: Azure PowerShell
               href: expressroute-howto-reset-peering.md
+        - name: Configuración del valor de la comunidad BGP para la red virtual
+          href: how-to-configure-custom-bgp-communities.md
         - name: Cambio de emparejamiento público a emparejamiento de Microsoft
           href: how-to-move-peering.md
     - name: Cifrado del tráfico en circuitos
