--- a/articles/active-directory/governance/TOC.yml
+++ b/articles/active-directory/governance/TOC.yml
@@ -43,10 +43,8 @@
           href: what-is-inter-directory-provisioning.md
     - name: Revisiones de acceso
       items:
-        - name: Administración del acceso de los invitados con las revisiones
-          href: manage-guest-access-with-access-reviews.md
-        - name: Administración del acceso de usuarios con revisiones
-          href: manage-user-access-with-access-reviews.md
+        - name: Administración del acceso con revisiones
+          href: manage-access-review.md
         - name: Administración de usuarios excluidos del acceso condicional
           href: conditional-access-exclusion.md
     - name: Examen y eliminación de usuarios de las organizaciones externas
@@ -94,7 +92,7 @@
               href: entitlement-management-access-package-lifecycle-policy.md
             - name: Configuración de la separación de tareas
               href: entitlement-management-access-package-incompatible.md
-            - name: Ver solicitudes
+            - name: Visualización y eliminación de solicitudes
               href: entitlement-management-access-package-requests.md
             - name: Volver a procesar solicitudes
               href: entitlement-management-reprocess-access-package-requests.md
@@ -123,9 +121,7 @@
             - name: Creación de una revisión de acceso
               href: entitlement-management-access-reviews-create.md
             - name: Revisar acceso
-              href: entitlement-management-access-reviews-review-access.md
-            - name: Revisar el acceso por sí mismo
-              href: entitlement-management-access-reviews-self-review.md
+              href: self-access-review.md
         - name: Grupos y aplicaciones
           items:
             - name: Creación de una revisión de acceso
