--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -294,7 +294,7 @@
           items:
             - name: Desencadenador HTTP
               items:
-                - name: Azure Portal
+                - name: Azure portal
                   href: functions-create-function-app-portal.md
                 - name: Línea de comandos
                   href: ./create-first-function-cli-csharp.md
@@ -523,6 +523,8 @@
           href: /azure/templates/microsoft.web/2018-11-01/sites/functions
         - name: Azure CLI
           href: /cli/azure/functionapp
+        - name: "Azure\_Functions\_Core\_Tools"
+          href: functions-core-tools-reference.md
         - name: Azure PowerShell
           href: /powershell/module/az.functions
         - name: Java
@@ -531,8 +533,6 @@
           href: /python/api/azure-functions/azure.functions
     - name: Referencia de configuración de aplicación
       href: functions-app-settings.md
-    - name: "Azure\_Functions\_Core\_Tools"
-      href: functions-core-tools-reference.md
     - name: Desencadenadores y enlaces
       items:
         - name: Blob Storage
@@ -549,7 +549,7 @@
             - name: Output
               displayName: Blob storage
               href: functions-bindings-storage-blob-output.md
-        - name: "Azure Cosmos\_DB"
+        - name: Azure Cosmos DB
           items:
             - name: Functions 1.x
               href: functions-bindings-cosmosdb.md
@@ -697,6 +697,8 @@
           items:
             - name: AZF0001
               href: errors-diagnostics/sdk-rules/azf0001.md
+            - name: AZF0002
+              href: errors-diagnostics/sdk-rules/azf0002.md
     - name: host.json 2.x reference
       href: functions-host-json.md
     - name: host.json 1.x reference
@@ -730,7 +732,7 @@
     - name: Twitter
       href: 'https://twitter.com/azurefunctions'
     - name: Proporcionar comentarios sobre el producto
-      href: 'https://feedback.azure.com/forums/355860-azure-functions'
+      href: 'https://feedback.azure.com/d365community/forum/9df02822-f224-ec11-b6e6-000d3a4f0da0'
     - name: Repositorio de GitHub de Azure Functions
       href: 'https://github.com/Azure/Azure-Functions/'
     - name: Actualizaciones de Azure
