--- a/articles/azure-netapp-files/TOC.yml
+++ b/articles/azure-netapp-files/TOC.yml
@@ -305,3 +305,5 @@
       href: ../storage/common/nfs-comparison.md?toc=%2fazure%2fazure-netapp-files%2ftoc.json
     - name: Comparación entre Azure NetApp Files y Azure Files
       href: ../storage/files/storage-files-netapp-comparison.md
+    - name: Azure NetApp Files en Microsoft Q&A
+      href: 'https://docs.microsoft.com/answers/topics/25532/azure-netapp-files.html'
