--- a/articles/azure-web-pubsub/toc.yml
+++ b/articles/azure-web-pubsub/toc.yml
@@ -51,6 +51,8 @@
       items:
         - name: Creación de clientes de WebSocket
           href: howto-websocket-connect.md
+        - name: Configuración del controlador de eventos
+          href: howto-develop-eventhandler.md
     - name: Monitor
       items:
         - name: Auditoría de cumplimiento mediante Azure Policy
@@ -69,12 +71,18 @@
           href: howto-secure-shared-private-endpoints.md
         - name: Uso de una identidad administrada
           href: howto-use-managed-identity.md
+        - name: "Configuración de la autorización de Azure\_AD"
+          items:
+            - name: Autorización desde aplicaciones de Azure
+              href: howto-authorize-from-application.md
+            - name: Autorización mediante identidades administradas
+              href: howto-authorize-from-managed-identity.md
     - name: Solucionar problemas
       items:
         - name: Recopilación de un seguimiento de red
           href: howto-troubleshoot-network-trace.md
-        - name: Captura de registros de diagnóstico
-          href: howto-troubleshoot-diagnostic-logs.md
+        - name: Captura de registros de recursos
+          href: howto-troubleshoot-resource-logs.md
 - name: Conceptos
   expanded: true
   items:
@@ -90,6 +98,8 @@
       href: concept-performance.md
     - name: Modelo de facturación
       href: concept-billing-model.md
+    - name: "Autorización de Azure\_AD"
+      href: concept-azure-ad-authorization.md
 - name: Referencia
   items:
     - name: Subprotocolos de WebSocket
