--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -9,7 +9,7 @@
           href: azure-stack-edge-gpu-overview.md
     - name: Guías de inicio rápido
       items:
-        - name: Primeros pasos
+        - name: Introducción
           href: azure-stack-edge-gpu-quickstart.md
     - name: Tutoriales
       items:
@@ -176,7 +176,7 @@
           href: azure-stack-edge-gpu-manage-certificates.md
         - name: Solución de errores de certificados
           href: azure-stack-edge-gpu-certificate-troubleshooting.md
-    - name: Máquinas virtuales
+    - name: Máquinas virtuales (versión preliminar)
       items:
         - name: ¿Qué son las máquinas virtuales?
           href: azure-stack-edge-gpu-virtual-machine-overview.md
@@ -206,6 +206,8 @@
               href: azure-stack-edge-gpu-deploy-virtual-machine-templates.md
             - name: 'Máquinas virtuales: GPU'
               href: azure-stack-edge-gpu-deploy-gpu-virtual-machine.md
+            - name: 'Máquinas virtuales: HPN'
+              href: azure-stack-edge-gpu-deploy-virtual-machine-high-performance-network.md
             - name: 'Máquinas virtuales: Cmdlets de Azure PowerShell'
               href: azure-stack-edge-gpu-deploy-virtual-machine-powershell.md
             - name: 'Máquinas virtuales: Script de Azure PowerShell'
@@ -288,7 +290,7 @@
                   href: azure-stack-edge-gpu-deploy-iot-edge-gpu-sharing.md
                 - name: Desarrollo de un módulo de C#
                   href: azure-stack-edge-gpu-create-iot-edge-module.md
-            - name: A través de Azure Arc (versión preliminar)
+            - name: A través de Azure Arc
               items:
                 - name: Habilitación de Arc en el clúster de Kubernetes
                   href: azure-stack-edge-gpu-deploy-arc-kubernetes-cluster.md
@@ -296,6 +298,10 @@
                   href: azure-stack-edge-gpu-deploy-stateless-application-git-ops-guestbook.md
                 - name: Implementación del controlador de datos de Azure Arc
                   href: azure-stack-edge-gpu-deploy-arc-data-controller.md
+        - name: Procedimientos
+          items:
+            - name: Configuración de MetalLB
+              href: azure-stack-edge-gpu-configure-metallb-bgp-mode.md
     - name: IoT Edge
       items:
         - name: Implementación de ejemplos de IoT Edge
@@ -340,8 +346,6 @@
           href: azure-stack-edge-gpu-data-residency.md
         - name: Ver integración de Key Vault
           href: azure-stack-edge-gpu-activation-key-vault.md
-        - name: Habilitación del registro proactivo
-          href: azure-stack-edge-gpu-proactive-log-collection.md
     - name: Seguridad compartida
       items:
         - name: Introducción a la seguridad
@@ -392,11 +396,17 @@
               href: azure-stack-edge-gpu-troubleshoot-activation.md
             - name: Registros y diagnósticos de dispositivos
               href: azure-stack-edge-gpu-troubleshoot.md
+            - name: Habilitación del registro proactivo
+              href: azure-stack-edge-gpu-proactive-log-collection.md
+            - name: Habilitación de la compatibilidad remota
+              href: azure-stack-edge-gpu-remote-support-diagnostics-repair.md
             - name: Ponerse en contacto con el servicio de soporte técnico de Microsoft
               href: azure-stack-edge-contact-microsoft-support.md
     - name: Notas de la versión compartidas
       items:
-        - name: 2106 - Actual
+        - name: '2110: actual'
+          href: azure-stack-edge-gpu-2110-release-notes.md
+        - name: 2106
           href: azure-stack-edge-gpu-2106-release-notes.md
         - name: 2105
           href: azure-stack-edge-gpu-2105-release-notes.md
