--- a/articles/spring-cloud/index.yml
+++ b/articles/spring-cloud/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: karlerickson
   ms.author: karler
   ms.date: 09/26/2019
-  ms.openlocfilehash: 1c5fbd1314d4296efb42afa8fecc94acb87b2a39
-  ms.sourcegitcommit: 692382974e1ac868a2672b67af2d33e593c91d60
+  ms.openlocfilehash: e184eae50cf7aaecbb5a9713652776319ec0a461
+  ms.sourcegitcommit: 702df701fff4ec6cc39134aa607d023c766adec3
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 10/22/2021
-  ms.locfileid: "130245841"
+  ms.lasthandoff: 11/03/2021
+  ms.locfileid: "131463285"
 landingContent:
 - title: Acerca de Azure Spring Cloud
   linkLists:
@@ -52,8 +52,8 @@ landingContent:
       url: how-to-cicd.md
     - text: Habilitación de implementaciones azules y verdes mediante Azure Spring Cloud
       url: how-to-staging-environment.md
-    - text: Uso del almacenamiento persistente en Azure Spring Cloud
-      url: how-to-persistent-storage.md
+    - text: Uso del almacenamiento persistente integrado
+      url: how-to-built-in-persistent-storage.md
 - title: Supervisión de una aplicación
   linkLists:
   - linkListType: tutorial
