--- a/articles/communication-services/toc.yml
+++ b/articles/communication-services/toc.yml
@@ -143,6 +143,8 @@ items:
         href: concepts/identity-model.md
       - name: Authentication
         href: concepts/authentication.md
+      - name: Network Traversal
+        href: concepts/network-traversal.md
       - name: Privacidad
         href: concepts/privacy.md
       - name: Precios
