--- a/articles/chaos-studio/TOC.yml
+++ b/articles/chaos-studio/TOC.yml
@@ -14,7 +14,7 @@
   items:
     - name: Ejecución y administración del experimento
       href: chaos-studio-run-experiment.md
-- name: Ejemplos
+- name: Muestras
   items:
     - name: API REST de Azure
       href: chaos-studio-samples-rest-api.md
@@ -28,7 +28,7 @@
       href: chaos-studio-targets-capabilities.md
     - name: Permisos y seguridad
       href: chaos-studio-permissions-security.md
-- name: Guías paso a paso
+- name: Guías de procedimientos
   items:
     - name: 'Creación y ejecución de un experimento: errores directos del servicio'
       href: chaos-studio-tutorial-service-direct.md
@@ -44,6 +44,8 @@
       href: chaos-studio-fault-library.md
     - name: Proveedores de errores
       href: chaos-studio-fault-providers.md
+    - name: Limitaciones y problemas conocidos generales
+      href: chaos-studio-limitations.md
     - name: Límites de servicio
       href: chaos-studio-service-limits.md
     - name: Documentación de la API de REST
