--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -374,8 +374,6 @@ items:
         href: keyword-recognition-guidelines.md
       - name: Regiones admitidas
         href: keyword-recognition-region-support.md
-  - name: Identificación del idioma
-    href: language-identification.md
   - name: Profundización en el escenario
     items:
       - name: Escenarios de conversación
@@ -455,7 +453,7 @@ items:
                 items:
                   - name: Creación de una aplicación Comandos personalizados
                     href: quickstart-custom-commands-application.md
-              - name: Guías paso a paso
+              - name: Guías de procedimientos
                 items:
                   - name: Desarrollo y personalización de aplicaciones de Comandos personalizados
                     href: how-to-develop-custom-commands-application.md
