--- a/articles/container-apps/index.yml
+++ b/articles/container-apps/index.yml
@@ -5,16 +5,16 @@ metadata:
   title: Documentación de Azure Container Apps
   description: Azure Container Apps permite ejecutar aplicaciones contenedorizadas sin preocuparse por la orquestación o la infraestructura.
   ms.topic: landing-page
-  ms.service: app-service
+  ms.service: container-apps
   author: craigshoemaker
   ms.author: cshoe
   ms.date: 10/22/2021
-  ms.openlocfilehash: 75e0b19f44ff8ec83ecfc0b4ef6c931d8b160a0b
-  ms.sourcegitcommit: 8946cfadd89ce8830ebfe358145fd37c0dc4d10e
+  ms.openlocfilehash: fd7d39ec39cb266f690930d092f0dddcce6650a7
+  ms.sourcegitcommit: 4cd97e7c960f34cb3f248a0f384956174cdaf19f
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 11/05/2021
-  ms.locfileid: "131846166"
+  ms.lasthandoff: 11/08/2021
+  ms.locfileid: "132028308"
 landingContent:
 - title: Acerca de Azure Container Apps
   linkLists:
